2.1.3: 23.04.2020
    -Moved version to package.json
    -Replaced executeFunctionByName with simpler Function
    -Added Reason to why RedditAPI fails

2.1.2: 24.03.2020
    -Fixed TwitchAPI
    -Updated LeagueAPI

2.1.1: 22.03.2020
    -Fixed LeagueAPI

2.1.0: 22.03.2020
    -Added TwitchAPI

2.0.2: 21.03.2020
    -Added gameId to Callback

2.0.1: 21.03.2020
    -Added Detection for Players in same Game

2.0.0: 20.03.2020
    -Moved from leagueapiwrapper to twisted for RiotAPI

1.1.0: 20.03.2020
    -Refractored API-Calls into own Files

1.0.2: 19.03.2020
    -Added Dependencies Folder to gitignore

1.0.1: 18.03.2020
    -Deleted unnecessary File

1.0.0: 14.03.2020
    -Full support for osu, League, Reddit

0.0.3: 14.03.2020
    -Added League support
    -Added osu! support

0.0.2: 14.03.2020
    -Added node modules
    -Added Reddit support

0.0.1: 14.03.2020
    -Init